--- a/experiments/example.ipynb
+++ b/experiments/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7a156c97-cb06-4b05-81de-4c57a1173a62",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `c:\\My Project\\NoisyReach.jl`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/NoisyReach.jl`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: The project dependencies or compat requirements have changed since the manifest was last resolved.\n",
+      "│ It is recommended to `Pkg.resolve()` or consider `Pkg.update()` if necessary.\n",
+      "└ @ Pkg.API /Users/tingan/.julia/juliaup/julia-1.10.3+0.aarch64.apple.darwin14/share/julia/stdlib/v1.10/Pkg/src/API.jl:1807\n"
      ]
     }
    ],
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e754cf27-eefc-4b21-ac63-5942250272ff",
    "metadata": {},
    "outputs": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c4f21e2f-40cf-487f-a2b1-93debc853125",
    "metadata": {},
    "outputs": [
@@ -72,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "a8c2faab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "matrix_integral (generic function with 3 methods)"
+       "matrix_integral (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -87,38 +96,33 @@
     }
    ],
    "source": [
-    "function matrix_integral(A::AbstractMatrix{Float64}, B::AbstractMatrix{Float64}, a::Float64, b::Float64)\n",
-    "    integrand(s) = exp(A * s)\n",
-    "    result = zeros(eltype(A), size(A))\n",
-    "    for i in 1:size(A, 1)\n",
-    "        for j in 1:size(A, 2)\n",
-    "            result[i, j] = quadgk(s -> integrand(s)[i, j], a, b)[1]\n",
-    "        end\n",
-    "    end \n",
-    "    return result * B\n",
+    "function matrix_integral(A::AbstractMatrix, B::AbstractMatrix, lower_limit::Float64, upper_limit::Float64)\n",
+    "    integrand = s -> exp(A * s) * B\n",
+    "    result, _ = quadgk(integrand, lower_limit, upper_limit)\n",
+    "    return result\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "c4cd3ac4-06f4-48a2-a11f-c1b2ef9a1a54",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StateSpace{Continuous, Float64}\n",
+       "StateSpace{Continuous, Int64}\n",
        "A = \n",
-       "  0.0   1.0\n",
-       " -1.0  -1.0\n",
+       "  0   1\n",
+       " -1  -1\n",
        "B = \n",
-       " 0.0\n",
-       " 1.0\n",
+       " 0\n",
+       " 1\n",
        "C = \n",
-       " 1.0  0.0\n",
+       " 1  0\n",
        "D = \n",
-       " 0.0\n",
+       " 0\n",
        "\n",
        "Continuous-time state-space model"
       ]
@@ -138,17 +142,17 @@
     "# Γ_aug = [0 0.0005 1]\n",
     "# C_aug = [1 0 0]\n",
     "sys = let\n",
-    "    A = [0.0 1.0; -1.0 -1.0]\n",
-    "    B = [0.0; 1.0]\n",
-    "    C = [1.0 0.0]\n",
-    "    D = 0.0\n",
+    "    A = [0 1; -1 -1]\n",
+    "    B = [0; 1]\n",
+    "    C = [1 0]\n",
+    "    D = 0\n",
     "    ss(A, B, C, D)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "46e5ef64-b995-49ac-84f2-3f56a1d359fc",
    "metadata": {},
    "outputs": [
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "0bd95d15-4514-4e84-ad92-08c218e0248c",
    "metadata": {},
    "outputs": [
@@ -227,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "11cc56e4-3e3f-43d6-b6ad-1bce0ab4509a",
    "metadata": {},
    "outputs": [
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "1622ef1c",
    "metadata": {},
    "outputs": [
@@ -262,13 +266,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: redefinition of constant Main.errors. This may fail, cause incorrect answers, or produce other errors.\n"
-     ]
     }
    ],
    "source": [
@@ -281,17 +278,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "8178ce40",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3×3 Matrix{Float64}:\n",
-       " 1.0127    0.149407  0.00336739\n",
-       " 0.172671  1.26289   0.122367\n",
-       " 0.307036  0.48328   0.0441294"
+       "2×3 Matrix{Float64}:\n",
+       " 0.723651  1.09385  0.0995609\n",
+       " 0.307036  0.48328  0.0441294"
       ]
      },
      "metadata": {},
@@ -310,13 +306,12 @@
     "    D_aug = [sys.D 0]\n",
     "    ss(ϕ_aug, Γ_aug, C_aug, D_aug, Ts)\n",
     "end\n",
-    "K = lqr(ControlSystemsBase.Discrete, sys_aug.A, sys_aug.B, I, I)\n",
-    "Φ = sys_aug.A + sys_aug.B * K"
+    "K = lqr(ControlSystemsBase.Discrete, sys_aug.A, sys_aug.B, I, I)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "e5c26cd9",
    "metadata": {},
    "outputs": [
@@ -342,37 +337,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "926daf4c",
+   "execution_count": 20,
+   "id": "e687f6f1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\n\nClosest candidates are:\n  Zonotope(::VN, !Matched::MN) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:94\n  Zonotope(::VN, !Matched::AbstractVector{VN}) where VN<:(AbstractVector)\n   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:106\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  Zonotope(::VN, !Matched::MN) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n",
-      "   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:94\n",
-      "  Zonotope(::VN, !Matched::AbstractVector{VN}) where VN<:(AbstractVector)\n",
-      "   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:106\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\My Project\\NoisyReach.jl\\experiments\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X14sZmlsZQ==.jl:1"
-     ]
+     "data": {
+      "text/plain": [
+       "11-element Vector{Vector{Float64}}:\n",
+       " [1.0, 1.0, 0.0]\n",
+       " [1.13, 1.0, 0.0]\n",
+       " [1.30132178769642, 1.5683044969288495, 0.9132527840782902]\n",
+       " [1.5656335117483775, 2.4684816142869472, 1.3135311127136882]\n",
+       " [1.9736036029040591, 3.7647623226614937, 1.89900455232343]\n",
+       " [2.5889090412123625, 5.638527105607954, 2.751741265825341]\n",
+       " [3.5043427224920793, 8.35341806077923, 3.9932923205910447]\n",
+       " [4.855029778325602, 12.292975566242283, 5.800515622818432]\n",
+       " [6.8376814762499665, 18.015197553994717, 8.430745823988177]\n",
+       " [9.738610399951536, 26.33192409962799, 12.25841197281944]\n",
+       " [13.974493418376728, 38.42434272595301, 17.828316702794073]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "E = Zonotope(zeros(Float64, 2), Diagonal(errors))\n",
-    "W = get_error_bound(sys_aug.B, K, E)\n",
-    "x0center = 10.\n",
-    "x0size = 1.\n",
-    "x0 = Zonotope(x0center * ones(2), x0size * I(2))\n",
-    "r = reach(Φ, x0, W, 100)"
+    "H = 10\n",
+    "x0 = 1.\n",
+    "u1_0 = 0.\n",
+    "u2_0 = 0.\n",
+    "z0 = [fill(x0, size(sys.A, 1)); u2_0]\n",
+    "u0 = [u1_0; u2_0]\n",
+    "z = Vector{typeof(z0)}(undef, H+1) \n",
+    "u = Vector{typeof(u0)}(undef, H)\n",
+    "z[1] = z0\n",
+    "u[1] = u0\n",
+    "z[2] = sys_aug.A * z[1] + sys_aug.B * u[1]\n",
+    "z[2][end-length(u2_0)+1:end, :] .= 0\n",
+    "for k in 2:H\n",
+    "    u[k] = K_error * z[k]\n",
+    "    z[k+1] = sys_aug.A * z[k] + sys_aug.B * u[k]\n",
+    "end"
    ]
   }
  ],
