Add Case 7 template

--- a/experiments/Reach_all_uc.ipynb
+++ b/experiments/Reach_all_uc.ipynb
@@ -10,7 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Downloads/sc/NoisyReach.jl`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Downloads/sc/NoisyReach.jl`\n",
+      "\u001b[92m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
+      "   5792.8 ms\u001b[32m  ✓ \u001b[39mNoisyReach\n",
+      "  1 dependency successfully precompiled in 7 seconds. 380 already precompiled.\n"
      ]
     },
     {
@@ -146,7 +149,7 @@
       " [4] ss",
       "   @ ~/.julia/packages/ControlSystemsBase/GZBgD/src/types/StateSpace.jl:144 [inlined]",
       " [5] synthesize(sys::ControlSystemsBase.StateSpace{ControlSystemsBase.Continuous, Float64}, h::Float64, Dc::Float64, n::Int64)",
-      "   @ NoisyReach ~/Downloads/sc/NoisyReach.jl/src/statespace.jl:94",
+      "   @ NoisyReach ~/Downloads/sc/NoisyReach.jl/src/statespace.jl:95",
       " [6] top-level scope",
       "   @ In[5]:1"
      ]
@@ -155,7 +158,7 @@
    "source": [
     "sys_d, K_d = synthesize(sys, hd, Dcₔ, 3)\n",
     "\n",
-    "z₀ = [fill(x0, size(sys.A, 1)); u0]\n",
+    "z₀ = [fill(x0, size(sys.A, 1)); u0;]\n",
     "xds, uds = unzip([simulate(sys_d, Hd, z₀, K_uncertain, K_d, σₔ, μ) for _ in 1:N])\n",
     "xds = [[xd_i[1:2] for xd_i in xd] for xd in xds]\n",
     "uds = [[ud_i[1] for ud_i in ud] for ud in uds]\n",
